# Falcon

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/turastory/shanghycon/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hasher.c  native-lib.cpp
app/src/main/cpp/cryptonight/: hash-ops.h  slow-hash.c
app/src/main/java/com/turastory/shanghycon/: BottomNavigationBehavior.kt  Exec.kt  Extensions.kt  FeedAdapter.kt  FeedFragment.kt  HomeActivity.kt  HyconMiner.kt  MainActivity.kt  MyAppGlideModule.kt  Test.java  Util.java  WalletFragment.kt
app/src/main/java/com/turastory/shanghycon/network/: ApiRoute.kt  HyconApi.kt  UnsplashApi.kt
app/src/main/java/com/turastory/shanghycon/util/: Exec.kt  Util.java
app/src/main/java/com/turastory/shanghycon/vo/: AccountBalance.kt  Feed.kt  Urls.kt
app/src/main/res/drawable/: ic_feed.xml  ic_profile.xml
app/src/main/res/layout/: activity_home.xml  activity_test.xml  fragment_feed.xml  item_feed.xml
app/src/main/res/menu/: bottom_navigation_items.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/turastory/shanghycon/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
